deploy/kustomize/base/artemis/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: broker
  labels:
    app.kubernetes.io/name: artemis
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
